maintain z-index strategy to ensure other elements continue to work universally

--- a/apps/fui/src/styles/local/partials/2-components/minimalist-sidebar/minimalist-sidebar.scss
+++ b/apps/fui/src/styles/local/partials/2-components/minimalist-sidebar/minimalist-sidebar.scss
@@ -9,6 +9,7 @@
     // defined in layouts to ensure smoother animations
     width: var(--sidebar-width);
     // sidebar is always visible over all other layers except the overlay
+    z-index: var(--layers-sidebar);
     height: 100vh;
 
     display: flex;
